--- a/index.html
+++ b/index.html
@@ -59,6 +59,13 @@
       </div>
     </div>
   
+
+    <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/p/abcd1234/" data-instgrm-version="14" style="width:100%; max-width:540px;">
+      <a href="https://www.instagram.com/p/abcd1234/">Ver esta publicación en Instagram</a>
+  </blockquote>
+
+  <script async defer src="//www.instagram.com/embed.js"></script>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
